--- a/crazyflie_interfaces/CMakeLists.txt
+++ b/crazyflie_interfaces/CMakeLists.txt
@@ -40,6 +40,8 @@ rosidl_generate_interfaces(${PROJECT_NAME}
   "srv/RemoveLogging.srv"
   "srv/AddLogging.srv"
   "srv/Arm.srv"
+  "msg/AppChannelMessage.msg"
+  "srv/SendAppChannelMessage.srv"
   DEPENDENCIES builtin_interfaces geometry_msgs std_msgs 
   ADD_LINTER_TESTS
 )
